# window_widgets

./: .gitignore  config.cpp  config.h
processes/: CMakeLists.txt  main.cpp  processor.cpp  processor.h  ui.qml
time/: CMakeLists.txt  main.cpp  process.cpp  process.h  ui.qml
